everything works now

--- a/public/notes.html
+++ b/public/notes.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/assets/css/styles.css">
+
 </head>
 
 <body>
@@ -18,7 +19,9 @@
     <a class="navbar-brand" href="/">Note Taker
     </a>
     <div class="icons">
+      <!-- button class: save-note  -->
       <i class="fas fa-save text-light save-note"></i>
+      <!-- button class: new-note  -->
       <i class="fas fa-pen text-light new-note"></i>
     </div>
   </nav>
@@ -31,7 +34,9 @@
         </div>
       </div>
       <div class="col-8">
+        <!-- input class: note-title -->
         <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
+        <!-- text area class: note-textarea -->
         <textarea class="note-textarea" placeholder="Note Text"></textarea>
       </div>
     </div>
@@ -41,3 +46,10 @@
 </body>
 
 </html>
+
+<!-- BELOW CODE IS CRITICAL. IT HANDLES HOW FORM DATA IS SENT TO OUR SERVER -->
+<script type="text/javascript">
+
+
+
+</script>
