--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
-  
+  <meta property='og:title' content='Express Notetaker'/>
+  <meta name= "image" property='og:image' content='https://res.cloudinary.com/katedorse/image/upload/v1607326886/notetaker_ghez3a.png'/>
+  <meta property='og:description' content='Online Application allows you to Add, Edit and Delete Your Notes. Powered by Express.'/>
+  <meta property='og:url' content='https://afternoon-cove-63476.herokuapp.com/'/>
+  <meta name="author" content="Kate Dorse">
+  <meta property="og:type" content="Web Application">
 
 
 </head>
